--- a/FirstARSample/FirstARSample/Base.lproj/Main.storyboard
+++ b/FirstARSample/FirstARSample/Base.lproj/Main.storyboard
@@ -24,16 +24,36 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                             </arscnView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uTW-OM-Z7G">
-                                <rect key="frame" x="0.0" y="627" width="85" height="40"/>
+                                <rect key="frame" x="0.0" y="627" width="120" height="40"/>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="0.5" colorSpace="deviceWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="WeB-qO-RtS"/>
-                                    <constraint firstAttribute="width" constant="85" id="kYH-ds-7MN"/>
+                                    <constraint firstAttribute="width" constant="120" id="kYH-ds-7MN"/>
                                 </constraints>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <state key="normal" title="Add Cube"/>
+                                <connections>
+                                    <action selector="addCube:" destination="BYZ-38-t0r" eventType="touchUpInside" id="e4D-VP-eMS"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BsA-KI-wfJ">
+                                <rect key="frame" x="255" y="627" width="120" height="40"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="0.5" colorSpace="deviceWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="2Un-3S-twV"/>
+                                    <constraint firstAttribute="width" constant="120" id="wo1-ec-Ri4"/>
+                                </constraints>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <state key="normal" title="Add Cup"/>
+                                <connections>
+                                    <action selector="addCup:" destination="BYZ-38-t0r" eventType="touchUpInside" id="mB4-p9-Ecs"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstAttribute="trailing" secondItem="BsA-KI-wfJ" secondAttribute="trailing" id="0hZ-lp-Cby"/>
+                            <constraint firstAttribute="bottom" secondItem="BsA-KI-wfJ" secondAttribute="bottom" id="1WV-2r-iIg"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="uTW-OM-Z7G" secondAttribute="bottom" id="WTs-dd-BXY"/>
                             <constraint firstItem="Z9n-7r-DPP" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="WgB-Lh-WHM"/>
                             <constraint firstItem="Z9n-7r-DPP" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="bUI-3u-6yr"/>
@@ -42,10 +62,13 @@
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Z9n-7r-DPP" secondAttribute="bottom" id="xG1-Ol-k4F"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="ARsceneView" destination="Z9n-7r-DPP" id="7pb-BX-iVN"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="136.80000000000001" y="138.98050974512745"/>
+            <point key="canvasLocation" x="135.19999999999999" y="138.0809595202399"/>
         </scene>
     </scenes>
 </document>
